--- a/src/app/components/menu-logo/menu-logo.component.css
+++ b/src/app/components/menu-logo/menu-logo.component.css
@@ -1,18 +1,14 @@
-*{
-    color: #F5C400;
-}
-
 .container__menu-logo {
-    margin-left: 20%;
-    padding-top: 3%;
-    text-align: center;
-    width: 1000px;
+    color: #F5C400;
+    padding-top: 4%;
+    /* width: 400px; */
+}
+.menu-logo{
+    align-items: center;
+    color: #F5C400;
+    display: flex;
+    flex-direction: column;
 }
 .logo__name {
     font-family: 'Great Vibes', cursive;
-    font-size: 110px;
-}
-
-.logo__function {
-    font-size: 36px;
 }
