--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,8 @@
         <app-other-card></app-other-card>
         <app-other-card></app-other-card>
         <app-other-card></app-other-card>
-        <app-other-card></app-other-card> 
+        <!-- <app-other-card></app-other-card>  -->
+        <!-- <app-other-card></app-other-card>  -->
         
     </div>
 </div>
