--- a/src/app/components/main-card/main-card.component.css
+++ b/src/app/components/main-card/main-card.component.css
@@ -1,45 +1,32 @@
 
-.container-main {
-    display: flex;
-    justify-content: space-around;
-    margin: 20px;
-    margin-top: 50px;
-    margin-left: 20%;
-    width: 1000px;
-}
+/* -------------------------------  MAIN-CARD  -------------------------------------------- */
 
-.menus{
-    /* width: 1000px; */
-}
-
-.main__card-image {
-    margin-right: 20px;
-    width: 100%;
-}
-
-.main__card-text {
-    margin: auto;
-    text-align: center;
-}
-
-.main__card-text p {
+.container-main{
+    align-items: center;
     color: #F5C400;
-    text-align: left;
-    font-size: 30px;
-
+    display: flex;
+     justify-content: center;
 }
 
-.main__card-more{
-    background-color: #0097FF;
-    border-radius: 10px;
-    color: white;
-    font-size: 25px;
-    margin-top: 20px;
-    padding: 5px 10px;
+.main__card-image img{
+    padding-right: 4%;
 }
-
-.main__card-more a {
+.main__card-text{
+    display: flex;
+    flex-direction: column;
+}
+/* .main__card-text p{
+    padding-bottom: 10px;
+} */
+.main__card-more{    
     background-color: #0097FF;
-    color: white;
+    border: 2px solid #0097FF;
+}
+.main__card-more a{
+    background-color: #0097FF;
+    color: #FFFFFF;
     text-decoration: none;
+}
+.main__card-more a:hover{
+    color: #F5C400;
 }
