--- a/src/app/components/other-card/other-card.component.css
+++ b/src/app/components/other-card/other-card.component.css
@@ -1,43 +1,60 @@
+/* ------------------------------   OTHER-CARD  --------------------------------------------- */
+
 .container__other-cards{
+    margin-top: 1%;
     display: flex;
-    /* justify-content: center; */
-    /* margin-left: 24%; */
-    /* margin-left: -30px; */
-    padding-left: -80px;
-    margin-top: 30px;
-    width: 310px;
-}
+    flex-direction: row;
+    flex-wrap: wrap;
 
-.other-cards {
-    display: flex;
-    width: 200px;
 }
+.other-cards{
+    flex-direction: column;
+    flex-wrap: wrap;
+    /* align-items: center; */
+    /* margin-left: calc(50% - 450px); */
+    width: 300px;
+    /* height: 300px; */
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* flex-wrap: wrap; */
+    display: inline-flex;
 
+}
 .destaques__others-cards{
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    /* width: 280px; */
+    /* padding: 10px; */
     background-color: #F5C400;
-    margin: 10px;
-    padding: 30px;
+    align-items: center;
+    
+    /* width: 900px; */
+}
+.destaques__others-cards:first-child {
+    margin-left: 50%;
+    flex-wrap: wrap;
+}
+.destaques__others-cards:nth-child(2){
+    padding-left: 10px;
 }
 
-.other-cards img{
-  
+.destaques__others-cards img{
+    padding: 5px;
+    width: 240px;
 }
-
-.other-cards button{
-    background-color: #181824;
-    border-radius: 10px;
-    height: 60px;
-    margin-left: calc(50% - 90px);
-    margin-top: 20px;   
-    padding: 3px;
-    width: 180px;  
+.destaques__others-cards button{
+    width: 150px;
+    font-size: 20px;
+    border: 2px solid #F5C400;
+    border-radius: 8px;
+    padding: 5px;
+    background-color: #151827;
 }
-
-.other-cards button a{
-    background-color: #181824;
-    color: #fff;
+.destaques__others-cards button a{
     text-decoration: none;
-    font-size: 22px;
-    font-weight: 600;    
+    color: #FFFFFF;
+    background-color: #151827;
+}
+.destaques__others-cards button a:hover{
+    color: #52f507;
 }
