--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,14 +1,10 @@
-body{
-    width: 1000px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 10%;
-}
-
 
 .articles__others{
     display: flex;
-    padding-left: 16%;
+    /* width: 300px; */
 
-}
+
+    /* justify-content: center; */
+    padding-left: 500px;
+
+ } 
