Atualização na responsividade other-cards

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,10 +1,6 @@
 
 .articles__others{
     display: flex;
-    /* width: 300px; */
+    /* justify-content: space-between; */
 
-
-    /* justify-content: center; */
-    padding-left: 500px;
-
- } 
+ }  
