--- a/src/app/components/other-card/other-card.component.css
+++ b/src/app/components/other-card/other-card.component.css
@@ -1,39 +1,26 @@
 /* ------------------------------   OTHER-CARD  --------------------------------------------- */
 
 .container__other-cards{
-    margin-top: 1%;
+    margin-top: 4%;
+}
+.other-cards{
+    align-items: center;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-
-}
-.other-cards{
-    flex-direction: column;
-    flex-wrap: wrap;
-    /* align-items: center; */
-    /* margin-left: calc(50% - 450px); */
-    width: 300px;
-    /* height: 300px; */
-    /* display: flex; */
+    height: 300px;
     /* flex-direction: row; */
     /* flex-wrap: wrap; */
-    display: inline-flex;
+    display: inline;
 
 }
 .destaques__others-cards{
+    align-items: center;
+    background-color: #F5C400;
     display: flex;
     flex-direction: column;
-    /* width: 280px; */
-    /* padding: 10px; */
-    background-color: #F5C400;
-    align-items: center;
-    
-    /* width: 900px; */
 }
-.destaques__others-cards:first-child {
-    margin-left: 50%;
-    flex-wrap: wrap;
-}
+
 .destaques__others-cards:nth-child(2){
     padding-left: 10px;
 }
@@ -43,17 +30,17 @@
     width: 240px;
 }
 .destaques__others-cards button{
-    width: 150px;
-    font-size: 20px;
+    background-color: #151827;
     border: 2px solid #F5C400;
     border-radius: 8px;
+    font-size: 20px;
     padding: 5px;
-    background-color: #151827;
+    width: 150px;
 }
 .destaques__others-cards button a{
-    text-decoration: none;
-    color: #FFFFFF;
     background-color: #151827;
+    color: #FFFFFF;
+    text-decoration: none;
 }
 .destaques__others-cards button a:hover{
     color: #52f507;
