--- a/src/app/components/other-card/other-card.responsive.component.css
+++ b/src/app/components/other-card/other-card.responsive.component.css
@@ -1,13 +1,22 @@
 @media screen and (min-width: 1025px) {
     
     /* ------------------------------   OTHER-CARD  --------------------------------------------- */
-    
+    /* .articles__others{
+        margin-left: calc(50% - 530px);    
+     }   */
+
     .other-cards{
-        margin-left: calc(50% - 450px);
-        width: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* margin-left: calc(50% - 450px); */
+        margin-left: 30%;
+        /* width: 30%; */
+        margin-left: 40%;
         height: 300px;
         display: flex;
         flex-direction: row;
+    
     }
     .destaques__others-cards{
         width: 280px;
@@ -30,25 +39,24 @@
     
     
     /* ------------------------------   OTHER-CARD  --------------------------------------------- */
-    
+ 
     .other-cards{
-        margin-left: calc(50% - 340px);
-        width: 675px;
         height: 225px;
+        width: 675px;        
     }
     .destaques__others-cards{
-        width: 210px;
         padding: 8px;
+        width: 210px;
     }
     .destaques__others-cards img{
         padding: 4px;
         width: 180px;
     }
     .destaques__others-cards button{
-        width: 110px;
-        font-size: 15px;
         border-radius: 6px;
+        font-size: 15px;
         padding: 4px;
+        width: 110px;
     }
     
     }
@@ -62,23 +70,23 @@
     /* ------------------------------   OTHER-CARD  --------------------------------------------- */
     
     .other-cards{
-        margin-left: calc(50% - 210px);
-        width: 420px;
         height: 140px;
+        /* margin-left: calc(50% - 210px); */
+        width: 420px;
     }
     .destaques__others-cards{
-        width: 130px;
         padding: 5px;
+        width: 130px;
     }
     .destaques__others-cards img{
         padding: 3px;
         width: 110px;
     }
     .destaques__others-cards button{
-        width: 70px;
-        font-size: 10px;
         border-radius: 4px;
+        font-size: 10px;
         padding: 3px;
+        width: 70px;
     }
         
     }
@@ -94,38 +102,41 @@
     
     }
     .other-cards{
-        margin: 4% 0;
         align-items: center;
-        margin-left: calc(50% - 130px);
-        width: 320px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
         height: 100px;
+        margin: 4% 0;
         margin-bottom: 200px;
+        margin-left: calc(50% - 130px);
+        /* width: 320px; */
     
     }
     .destaques__others-cards{
+        align-items: center;
+        background-color: #F5C400;
         display: flex;
         flex-direction: column;
-        width: 280px;
         padding: 10px;
-        background-color: #F5C400;
-        align-items: center;
+        width: 280px;
     }
     .destaques__others-cards img{
         padding: 5px;
         width: 240px;
     }
     .destaques__others-cards button{
-        width: 150px;
-        font-size: 20px;
+        background-color: #151827;
         border: 2px solid #F5C400;
         border-radius: 8px;
+        font-size: 20px;
         padding: 5px;
-        background-color: #151827;
+        width: 150px;
     }
     .destaques__others-cards button a{
-        text-decoration: none;
-        color: #FFFFFF;
         background-color: #151827;
+        color: #FFFFFF;
+        text-decoration: none;
     }
         
     }
