--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,12 @@
 body {
    background-color: #2E2824; 
 }
+
+.container__other-cards{
+    width: auto;
+}
+
+/* .other-cards{
+    display: flex;
+    flex-direction: column;
+} */
