Parte lógica implementada

--- a/src/app/components/main-card/main-card.component.html
+++ b/src/app/components/main-card/main-card.component.html
@@ -1,11 +1,11 @@
 <div class="container-main">
     <div class="main__card-image">
-        <img src="https://cdn.pixabay.com/photo/2016/12/28/09/36/web-1935737_960_720.png" alt="Foto Desenvolvimento Full Stack">
+        <img src="{{photoCover}}">
 
     </div>
     <div class="main__card-text">        
         <p>
-            Desenvolvo sua página na internet, dou vida a sua aplicação, as suas idéias.
+            {{cardDescription}}
         </p>
         <button class="main__card-more"><a href="#">Saiba mais</a></button>
     </div>
