--- a/src/app/components/other-card/other-card.component.html
+++ b/src/app/components/other-card/other-card.component.html
@@ -1,7 +1,7 @@
 <div class="container__other-cards">
     <div class="other-cards">
         <div class="destaques__others-cards">
-            <img src="https://via.placeholder.com/240" alt="">
+            <img src="{{ photoCover }}" alt="">
       
             <button><a href="">Saiba Mais</a></button>      
         </div>      
