--- a/src/app/components/other-card/other-card.component.html
+++ b/src/app/components/other-card/other-card.component.html
@@ -2,8 +2,8 @@
     <div class="other-cards">
         <div class="destaques__others-cards">
             <img src="{{ photoCover }}" alt="">
-      
-            <button><a href="">Saiba Mais</a></button>      
-        </div>      
+
+            <button><a [routerLink]="['content', Id]">Saiba Mais</a></button>
+        </div>
     </div>
 </div>
