--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,36 +1,31 @@
-<app-menu-logo></app-menu-logo>
-<app-menu-bar></app-menu-bar>
-
-
 <div class="articles">
+
     <div class="articles__main">
-        <app-main-card 
-            photoCover="https://www.wrcursosonline.com.br/blog/wp-content/uploads/2022/04/1590690690-front-end.jpg" 
+        Id="1"
+        <app-main-card
+            photoCover="https://www.wrcursosonline.com.br/blog/wp-content/uploads/2022/04/1590690690-front-end.jpg"
             cardDescription="Front-end é a área relacionanda a visual de aplicações, como design, forma da disposição...">
         </app-main-card>
 
-        <app-main-card 
+        <app-main-card
             photoCover="https://www.wrcursosonline.com.br/blog/wp-content/uploads/2022/04/maxresdefault-1024x576.jpg"
             cardDescription="Back-end é tudo que dá estrutura e apoio às ações do usuário da máquina...">
         </app-main-card>
-        
+
     </div>
 
 
     <div class="articles__others">
-        <app-other-card 
+        <app-other-card Id="2"
             photoCover="https://static.vecteezy.com/ti/vetor-gratis/t2/1416690-js-emblem-orange-shield-and-white-text-vetor.jpg">
         </app-other-card>
-        
-        <app-other-card
-            photoCover="https://www.w3.org/html/logo/img/mark-word-icon.png">
+
+        <app-other-card Id="3" photoCover="https://www.w3.org/html/logo/img/mark-word-icon.png">
         </app-other-card>
-        
-        <app-other-card
-           photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlWkibXFdfUB7h7FmKLmgwxe-__BdMPGNGDA&usqp=CAU" >
+
+        <app-other-card Id="4"
+            photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlWkibXFdfUB7h7FmKLmgwxe-__BdMPGNGDA&usqp=CAU">
         </app-other-card>
-        <!-- <app-other-card></app-other-card>  -->
-        <!-- <app-other-card></app-other-card>  -->
-        
+
     </div>
 </div>
