--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-home></app-home>
+<header>
+    <app-menu-logo></app-menu-logo>
+    <app-menu-bar></app-menu-bar>
+</header>
+
 <router-outlet></router-outlet>
