--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="menu-bar">
     <ul class="menus">
         <li><a href="#">Home</a></li>
-        <li><a href="../../pages/content/content.component.html">Serviços</a></li>
+        <li><a href="#">Serviços</a></li>
         <li><a href="https://www.linkedin.com/in/rodolfo-rs-faria/" target="_blank">Linkedin</a></li>
         <li><a href="https://github.com/rodolforsf/rodolforsf" target="_blank">GitHub</a></li>
     </ul>
